# MCP_CPP

./: CMakeLists.txt  Readme.md
cmake/: mcp_cppConfig.cmake.in
examples/: client_sample.cpp  server_sample.cpp
include/mcp/: client.hpp  logging.hpp  server.hpp  transport.hpp
include/mcp/client/: https_transport.hpp  options.hpp  sdk.hpp  stdio_transport.hpp  transport.hpp  types.hpp
include/mcp/detail/: http_util.hpp  stdio_transport_base.hpp
include/mcp/server/: options.hpp  sdk.hpp  stdio_transport.hpp  streamable_http_transport.hpp  transport.hpp  types.hpp
src/: client.cpp  https_transport.cpp  json_rpc_util.hpp  server.cpp  server_streamable_http_transport.cpp  stdio_transport.cpp
tests/: client_smoke_test.cpp  https_transport_smoke_test.cpp  server_smoke_test.cpp  server_streamable_http_transport_smoke_test.cpp  stdio_transport_smoke_test.cpp
